--- a/List-1.ipynb
+++ b/List-1.ipynb
@@ -41,9 +41,9 @@
     "\n",
     "顺序表的基本实现方式  \n",
     "元素顺序存放在一片足够大的连续存储区里。表中首元素存入存储区开始的位置，其余元素依次顺序存放。通过元素在存储区里的“物理位置”表示元素之间的逻辑顺序关系。存取操作可以在O(1)时间内完成。元素e[i]的地址计算公式（元素编号从0开始）:   \n",
-    "        Location(e[i]) = Location(e[0]) + c*i  \n",
+    "        Location(e[i]) = Location(e[0]) + c\*i  \n",
     "        其中c是一个元素所占用的存储空间。  \n",
-    "        start + cellsize*index  \n",
+    "        start + cellsize\*index  \n",
     "    顺序表的结构体定义。通过上面用结构体定义顺序表，我们可以看出顺序表的封装需要三个属性:   \n",
     "        1、存储空间的起始位置。数组data的存储位置就是线性表存储空间的存储位置  \n",
     "        2、线性表的最大存储容量。数组长度MAXSIZE  \n",
