--- a/List-1.ipynb
+++ b/List-1.ipynb
@@ -49,7 +49,7 @@
     "        2、线性表的最大存储容量。数组长度MAXSIZE  \n",
     "        3、线性表的当前长度。Length    \n",
     "\n",
-    "![image](https://github.com/baifan-wang/data_structures_and_algorithms_in_python/blob/master/1-list-1.png)\n",
+    "![image](https://raw.githubusercontent.com/baifan-wang/data_structures_and_algorithms_in_python/master/image/1-list-1.png)\n",
     "\n",
     "代码实现"
    ]
