--- a/6-map_1.ipynb
+++ b/6-map_1.ipynb
@@ -248,6 +248,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Python 标准函数中有一个hash函数，它可以计算参数的散列值。hash对一个对象调用或返回一个整数或抛出异常表示无定义。对数值类型有定义，保证当a == b 时两个数的hash 值相同。对内置不变组合类型有定义，包括str，tuple，frozenset。对无定义的对象调用，例如对包含可变成分的序列，hash 将抛出异常TypeError: unhashable type。调用时hash 到参数所属的类里找名为__hash__ 的方法，hash 有定义的内置类型都有自己的__hash__ 方法。类里没有__hash__ 方法即是hash 函数无定义。在自定义类里也可以定义这个方法。定义该方法使这个类的对象可以存入集合或作为字典的关键码。如果该类的对象可变，必须谨慎使用__hash__方法。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "参考文献:\n",
     "1. Goodrich M T, Tamassia R, Goldwasser M H. Data structures and algorithms in Python[M]. John Wiley & Sons Ltd, 2013.\n",
     "2. 裘宗燕. 数据结构与算法: Python语言描述. 机械工业出版社, 2016."
